# bazel-skia

./: BUILD.bazel  Dockerfile  LICENSE  README.md
.github/workflows/: ci_linux.yml  ci_windows.yml
linux/: args.gn
tests/: BUILD.bazel
tests/src/skia/: test.cc
tools/: install_dependencies.sh
windows/: args.gn
