cc_library(
    name = "skia_h",
    visibility = ["//visibility:public"],
    
    #includes = [ ],
    hdrs = glob(["include/**/*.h", "modules/**/*.h"]),
)

cc_import(name = "libcompression_utils_portable",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/compression_utils_portable.lib",
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libcompression_utils_portable.a",
        "//conditions:default": "linux_x86_64/libcompression_utils_portable.a",
    }),
)

cc_import(name = "libparticles",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/particles.lib",
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libparticles.a",
        "//conditions:default": "linux_x86_64/libparticles.a",
    }),
)

cc_import(name = "libpiex",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/particles.lib", # Not included on Windows
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libpiex.a",
        "//conditions:default": "linux_x86_64/libpiex.a",
    }),
)

cc_import(name = "libskia",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/skia.lib",
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libskia.a",
        "//conditions:default": "linux_x86_64/libskia.a",
    }),
)

cc_import(name = "libskresources",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/skresources.lib",
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libskresources.a",
        "//conditions:default": "linux_x86_64/libskresources.a",
    }),
)

cc_import(name = "libskshaper",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/skshaper.lib",
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libskshaper.a",
        "//conditions:default": "linux_x86_64/libskshaper.a",
    }),
)

cc_import(name = "libsvg",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/svg.lib",
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libsvg.a",
        "//conditions:default": "linux_x86_64/libsvg.a",
    }),
)

cc_import(name = "libdng_sdk",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/particles.lib", # Not included on Windows
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libdng_sdk.a",
        "//conditions:default": "linux_x86_64/libdng_sdk.a",
    }),
)



cc_import(name = "libskottie",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/skottie.lib",
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libskottie.a",
        "//conditions:default": "linux_x86_64/libskottie.a",
    }),
)

cc_import(name = "libsfntly",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/skia.lib", # Not Included on Windows
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libsfntly.a",
        "//conditions:default": "linux_x86_64/libsfntly.a",
    }),
)

cc_import(name = "libsksg",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/sksg.lib",
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libsksg.a",
        "//conditions:default": "linux_x86_64/libsksg.a",
    }),
)

cc_import(name = "libskunicode",
    visibility = ["//visibility:public"],

    static_library = select({
        "@bazel_tools//src/conditions:windows": "windows_x86_64/skunicode.lib",
        "@bazel_tools//src/conditions:darwin_x86_64": "macos_x86_64/libskunicode.a",
        "//conditions:default": "linux_x86_64/libskunicode.a",
    }),
)


cc_library(
    name = "skia",
    visibility = ["//visibility:public"],

    deps = [
        ":skia_h",
        ":libparticles",
        ":libpiex",
        ":libskia",
        ":libskresources",
        ":libskshaper",
        ":libsvg",
        ":libdng_sdk",
        ":libskottie",
        ":libsfntly",
        ":libsksg",
        ":libskunicode",
    ],

    linkopts = [ ] + select({
        "@bazel_tools//src/conditions:windows": [
            "-DEFAULTLIB:Opengl32.lib"
        ],
        "@bazel_tools//src/conditions:darwin_x86_64": [
            "-framework CoreText",
            "-framework CoreServices",
            "-framework CoreGraphics"
        ],
        "//conditions:default": [
            "-lGL",
            "-lz",
            "-lpng",
            "-ljpeg",
            "-lwebp",
            "-lwebpmux",
            "-lwebpdemux",
            "-lfreetype",
            "-lfontconfig",
        ],
    }),
)
