

cc_test(
    name = "skia_test",
    srcs = ["src/skia/test.cc"],
    deps = [
        ":skia"
    ],
    linkopts = ["-lpthread", "-ldl"], 
    linkstatic = 1,
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++17"],
        "//conditions:default": ["-std=c++17"],
    }),
)